fix reviews align

--- a/src/styles/card.scss
+++ b/src/styles/card.scss
@@ -70,7 +70,7 @@ body {
   &__rating {
     display: flex;
     justify-content: space-between;
-    align-items: flex-end;
+    align-items: center;
     margin-bottom: 24px;
   }
 
